--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ﻿<html lang="en"><head>
-<title>YouTube to midi Converter</title>
+<title>YouTube to mp3 Converter</title>
 <base>
 <meta name="robots" content="index,follow">
-<meta name="keywords" content="youtube to midi,youtube to mp3,youtube to mp3 convert,youtube to mp3 converter,mp3 to midi,mp3 to midi online,convert youtube to midi,youtube to midi convert,youtube to midi converter,covert youtube to mp3,convert video to midi,convert video to mp3,midi,youtube,mp3,converter,downloader,online,fast,easy,safe,free,Musical Instrument Digital Interface,convert,download,video,service,only,best">
-<meta name="description" content="Convert and download YouTube videos or mp3 to midi online for free in two simple steps with YouTube to midi converter. No registration or software download involved.">
+<meta name="keywords" content="youtube to mp3,youtube to mp3 convert,youtube to mp3 converter,youtube to mp3 online,youtube to mp3 convert,covert youtube to mp3,convert video to mp3,youtube,mp3,converter,downloader,online,fast,easy,safe,free,convert,download,video,service,only,best">
+<meta name="description" content="Convert and download YouTube videos to mp3 online for free in one click with YouTube to mp3 converter. No registration or software download involved.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="css/index.css">
@@ -54,7 +54,7 @@
   
   <div id="converter"> 
    <div id="title">
-  Step 2: Click <a href="http://bit.ly/1RJb4L7" target="_blank">HERE</a> to go to Ofoct.com Where You Can Convert mp3 to midi 
+  Step 2: Click <a href="http://bit.ly/1RJb4L7" target="_blank">HERE</a> to go to bla Where You Can Convert mp3 to midi 
    </div> 
    
   
