--- a/index.html
+++ b/index.html
@@ -48,21 +48,13 @@
    </div>
    <div id="buttons">
     <a id="download" href="#" rel="nofollow">Download</a>
-   <a href="https://www.facebook.com/sharer/sharer.php?u=https://youtube2midi.github.io/" rel="nofollow" target="blank">Share to Facebook</a>
+   <a href="https://www.facebook.com/sharer/sharer.php?u=https://youtube2mp3convert.github.io/" rel="nofollow" target="blank">Share to Facebook</a>
    </div>
   </div>
   
-  <div id="converter"> 
-   <div id="title">
-  Step 2: Click <a href="http://bit.ly/1RJb4L7" target="_blank">HERE</a> to go to bla Where You Can Convert mp3 to midi 
-   </div> 
    
   
-   <div id="buttons">
-    <a id="download" href="#" rel="nofollow">Download</a>
-   <a href="https://www.facebook.com/sharer/sharer.php?u=https://youtube2midi.github.io/" rel="nofollow" target="blank">Share to Facebook</a>
-   </div>
-  </div>  
+   
     
  
   
@@ -75,13 +67,8 @@
   <div id="text">
    <h1>Thought of the Day: Sega is Ages Spelled Backwards</h1>
    <p>
-   <br> 
-  Currently there doesn't exist a way to convert a youtube video to a midi file in one step, so this two-step method will have to do. This site is meant to help anyone who wants to make a midi out of the audio from any video on YouTube. Anyways, if you haven't checked out the Nintendo Switch yet, you totally should. Looks awesome.
-   </p>
-   
-   <p>
-  <br>  
-Convert and download YouTube videos to midi online for free in two simple steps. Youtube2midi.com is the easiest and only online service to convert a Youtube video to midi. No registration, software download, or account needed, just a YouTube URL.
+   <br>  
+Convert and download YouTube videos to an mp3 file online for free. Youtube2mp3convert.com is the easiest online service to convert a Youtube video to mp3. No registration, software download, or account needed, just a YouTube URL.
    </p>
   </div>
  </div>
