--- a/terms-of-use/index.html
+++ b/terms-of-use/index.html
@@ -1,5 +1,5 @@
-<html lang="en"><!-- Mirrored from www.youtube2mp3.cc/terms-of-use/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 31 Oct 2016 20:38:53 GMT --><head>
-<title>Terms of use - youtube2mp3.cc</title>
+<html lang="en"><head>
+<title>Terms of use</title>
 <base>
 <meta name="robots" content="index,follow">
 <meta name="keywords" content="terms of use">
@@ -20,12 +20,12 @@
   <p> - Copyrighted material is not allowed to be downloaded. <br>
 - The downloads are requested by the user, please read about DMCA. <br>
 - All files are for your personal use only. <br>
-- www.youtube2midi.com does <strong>not</strong> store any files. <br>
-- Videos will be forbidden upon your request. The site www.youtube2midi.com offers a technical service on a voluntary basis. Therefore, youtube2midi.com does not take liability for the service working unimpeded or for the permanent availability of the service, and must only be used for private purposes. <br>
-- www.youtube2midi.com is only to be used to access content which was posted onto the hosting platform by an authorized third party. It is not allowed to convert files that aren't publicly available. In case a third party right is already violated by downloading the content, the user bears complete responsibility for this as he or she started the processing of the data in question. It is the only purpose of www.youtube2midi.com to create a copy of downloadable online content for the private use of the user ("fair use"). The user bears full responsibility. <br>  
-- www.youtube2midi.com does not take liability towards the user or any third party for the permissibility of downloading content through our service. <br>
+- www.youtube2mp3convert.com does <strong>not</strong> store any files. <br>
+- Videos will be forbidden upon your request. The site www.youtube2mp3convert.com offers a technical service on a voluntary basis. Therefore, youtube2mp3convert.com does not take liability for the service working unimpeded or for the permanent availability of the service, and must only be used for private purposes. <br>
+- www.youtube2mp3convert.com is only to be used to access content which was posted onto the hosting platform by an authorized third party. It is not allowed to convert files that aren't publicly available. In case a third party right is already violated by downloading the content, the user bears complete responsibility for this as he or she started the processing of the data in question. It is the only purpose of www.youtube2mp3convert.com to create a copy of downloadable online content for the private use of the user ("fair use"). The user bears full responsibility. <br>  
+- www.youtube2mp3convert.com does not take liability towards the user or any third party for the permissibility of downloading content through our service. <br>
 - Our platform contains links to external websites of third parties, the contents of which we cannot influence. Hence, we cannot take responsibility for this content. The responsibility lies with the respective provider or host of the websites in question. All linked websites were checked for violations of rights at the time of establishing the link. There was no suspicion of illegal content at that time. Continuous checking of the linked websites, however, is not reasonable without any concrete evidence of a rights violation. Should we be informed about any rights violation, we will immediately delete such links. 
-- The express purpose of www.youtube2mp3.com is to convert a video file to the .midi format, <strong>not</strong> to the .mp3 format. If a higher authority requests any other function than converting a video to .midi format to be removed, it will be removed with no question.</p> 
+- If a higher authority requests any other function than converting a video to .mp3 format to be removed, it will be removed with no question.</p> 
  </div>
  
  <script async="" src="../../www.google-analytics.com/analytics.js"></script><script>
