--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <base>
 <meta name="robots" content="index,follow">
 <meta name="keywords" content="youtube to mp3,youtube to mp3 convert,youtube to mp3 converter,youtube to mp3 online,youtube to mp3 convert,covert youtube to mp3,convert video to mp3,youtube,mp3,converter,downloader,online,fast,easy,safe,free,convert,download,video,service,only,best">
-<meta name="description" content="Convert and download YouTube videos to mp3 online for free in one click with YouTube to mp3 converter. No registration or software download involved.">
+<meta name="description" content="Convert and download YouTube to mp3 online for free in one click with YouTube to mp3 converter. No registration or software download involved.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="css/index.css">
