--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
    <h1>Thought of the Day: Sega is Ages Spelled Backwards</h1>
    <p>
    <br>  
-Convert and download YouTube videos to an mp3 file online for free. Youtube2mp3convert.com is the easiest online service to convert a Youtube video to mp3. No registration, software download, or account needed, just a YouTube URL.
+Convert and download YouTube videos to an mp3 file online for free with youtube to mp3 converter. Youtube2mp3convert.com is the easiest online service to convert a Youtube video to mp3. No registration, software download, or account needed, just a YouTube URL.
    </p>
   </div>
  </div>
