--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html lang="en"><head>
-<title>MP3 to YouTube Converter</title>
+<title>YouTube2mp3</title>
 <base>
 <meta name="robots" content="index,follow">
-<meta name="keywords" content="mp3 to youtube,youtube to mp3,youtube to mp3 convert,youtube to mp3 converter,youtube to mp3 online,youtube to mp3 convert,covert youtube to mp3,convert video to mp3,youtube,mp3,converter,downloader,online,fast,easy,safe,free,convert,download,video,service,only,best">
-<meta name="description" content="Convert and download mp3 to YouTube online for free in one click with YouTube to mp3 converter. No registration or software download involved. Donald Trump Won Hillary Clinton Lost">
+<meta name="keywords" content="youtube2mp3">
+<meta name="description" content="Convert and download mp3 to YouTube online for free in one click with YouTube2mp3 converter. No registration or software download involved.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="css/index.css">
@@ -48,7 +48,7 @@
    </div>
    <div id="buttons">
     <a id="download" href="#" rel="nofollow">Download</a>
-   <a href="https://www.facebook.com/sharer/sharer.php?u=https://youtube2mp3convert.github.io/" rel="nofollow" target="blank">Share to Facebook</a>
+   <a href="https://www.facebook.com/sharer/sharer.php?u=https://youtube2mp3.github.io/" rel="nofollow" target="blank">Share to Facebook</a>
    </div>
   </div>
   
@@ -65,10 +65,10 @@
 
 <div class="h-line"></div>
   <div id="text">
-   <h1>Youtube to MP3 Convert</h1>
+   <h1>Youtube2mp3</h1>
    <p>
    <br>  
-Convert and download YouTube videos to an mp3 file online for free with youtube to mp3 converter. Youtube2mp3convert.com is the easiest online service to convert a Youtube video to mp3. No registration, software download, or account needed, just a YouTube URL. Donald Trump Won Hillary Clinton Lost
+Convert and download YouTube videos to an mp3 file online for free with our youtube to mp3 converter. Youtube2mp3 is the easiest online service to convert a Youtube video to mp3. No registration, software download, or account needed, just a YouTube URL.
    </p>
   </div>
  </div>
