--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <a href="#"><img id="logo" src="images/logo.png" alt=""></a>  
   <div id="converter"> 
    <div id="title">
-    Step 1: Paste Link of Youtube Video to Convert to mp3 
+   Paste Link of Youtube Video to Convert to mp3 
    </div> 
    <form method="post">
     <input id="input" name="video" autocomplete="off" type="text">
