--- a/index.html
+++ b/index.html
@@ -1,13 +1,4 @@
-<html lang="en"><script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-86953661-1', 'auto');
-  ga('send', 'pageview');
-
-</script><head>
+<html lang="en"><head>
 <title>YouTube2mp3</title>
 <base>
 <meta name="robots" content="index,follow">
@@ -92,6 +83,11 @@ Convert and download YouTube videos to an mp3 file online for free with our yout
   </p>
  </div>
  
+ <script async="" src="../www.google-analytics.com/analytics.js"></script><script async="" src="../www.google-analytics.com/analytics.js"></script><script async="" src="../www.google-analytics.com/analytics.js"></script><script async="" src="../www.google-analytics.com/analytics.js"></script><script async="" src="../www.google-analytics.com/analytics.js"></script><script async="" src="../www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="js/jquery-1.12.1.min.js"></script>
+ <script type="text/javascript" src="js/converter.js"></script>
+<script>
+  
+</script>
 
 
 
