--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
   <div id="text">
    <h1>Youtube2mp3</h1>
    <p>
-   <br>  
+Currently there doesn't exist a way to convert a youtube video to a midi file in one step, so this two-step method will have to do. This site is meant to help anyone who wants to make a midi out of the audio from any video on YouTube. Anyways, if you haven't checked out the Nintendo Switch yet, you totally should. Looks awesome.
+   </p>  
+     
+  <p>
+     <br>  
 Convert and download YouTube videos to an mp3 file online for free with our youtube to mp3 converter. Youtube2mp3 is the easiest online service to convert a Youtube video to mp3. No registration, software download, or account needed, just a YouTube URL.
    </p>
   </div>
