--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <div id="text">
    <h1>Youtube2mp3</h1>
    <p>
-Currently there doesn't exist a way to convert a youtube video to a midi file in one step, so this two-step method will have to do. This site is meant to help anyone who wants to make a midi out of the audio from any video on YouTube. Anyways, if you haven't checked out the Nintendo Switch yet, you totally should. Looks awesome.
+Currently there doesn't exist a way to convert a youtube video to a midi file in one step, so this two-step method will have to do. This site is meant to help anyone who wants to make a midi out of the audio from any video on YouTube. <strong>Anyways, if you haven't checked out the Nintendo Switch yet, you totally should. Looks awesome.</strong>
    </p>  
      
   <p>
