--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <title>YouTube2mp3</title>
 <base>
 <meta name="robots" content="index,follow">
-<meta name="keywords" content="youtube2mp3">
-<meta name="description" content="Convert and download mp3 to YouTube online for free in one click with YouTube2mp3 converter. No registration or software download involved.">
+<meta name="keywords" content="youtube2mp3,youtube mp3 multi converter,youtube mp3 batch">
+<meta name="description" content="Convert and download multiple YouTube videos to mp3 online for free with our Youtube to mp3 batch converter. No registration needed.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="css/index.css">
@@ -74,14 +74,9 @@
 
 <div class="h-line"></div>
   <div id="text">
-   <h1>Youtube2mp3</h1>
-   <p>
-Currently there doesn't exist a way to convert a youtube video to a midi file in one step, so this two-step method will have to do. This site is meant to help anyone who wants to make a midi out of the audio from any video on YouTube. <strong>Anyways, if you haven't checked out the Nintendo Switch yet, you totally should. Looks awesome.</strong>
-   </p>  
-     
-  <p>
-     <br>  
-Convert and download YouTube videos to an mp3 file online for free with our youtube to mp3 converter. Youtube2mp3 is the easiest online service to convert a Youtube video to mp3. No registration, software download, or account needed, just a YouTube URL.
+   <h1>Youtube2mp3 Multi Converter</h1>
+<p>
+Convert and download multiple YouTube videos to mp3 files online for free with our youtube to mp3 multi batch converter. Youtube2mp3multiconvert is the easiest online service to convert many Youtube videos to mp3. No registration, software download, or account needed, just a YouTube URL. <strong>Anyways, if you haven't checked out the Nintendo Switch yet, you totally should. Looks awesome.</strong>
    </p>
   </div>
  </div>
