--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <div id="text">
    <h1>Youtube2mp3 Multi Converter</h1>
 <p>
-Convert and download multiple YouTube videos to mp3 files online for free with our youtube to mp3 multi batch converter. Youtube2mp3multiconvert is the easiest online service to convert many Youtube videos to mp3. No registration, software download, or account needed, just a YouTube URL. <strong>Anyways, if you haven't checked out the Nintendo Switch yet, you totally should. Looks awesome.</strong>
+Convert and download multiple YouTube videos to mp3 files online for free with our youtube to mp3 multi batch converter. Youtube2mp3multiconvert is the easiest online service to convert many Youtube videos to mp3 all at once. No registration, software download, or account needed, just a YouTube URL. <strong>Anyways, if you haven't checked out the Nintendo Switch yet, you totally should. Looks awesome.</strong>
    </p>
   </div>
  </div>
