--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en"><script>
+<html lang="en"><head><script async="" src="https://www.google-analytics.com/analytics.js"></script><script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -7,7 +7,7 @@
   ga('create', 'UA-86953661-1', 'auto');
   ga('send', 'pageview');
 
-</script><head>
+</script>
 <title>YouTube2mp3</title>
 <base>
 <meta name="robots" content="index,follow">
@@ -38,6 +38,12 @@
 { display: none !important; }</style><style type="text/css">
 :root #content > #center > .dose > .dosesingle,
 :root #content > #right > .dose > .dosesingle
+{ display: none !important; }</style><style type="text/css">
+:root #content > #right > .dose > .dosesingle,
+:root #content > #center > .dose > .dosesingle
+{ display: none !important; }</style><script src="//youtube2mp3.disqus.com/embed.js" data-timestamp="1480092336762"></script><link rel="stylesheet" href="https://a.disquscdn.com/next/embed/styles/loading.88cedde79846569c88b36b63a7cc7414.css"><script src="https://a.disquscdn.com/next/embed/alfie.f51946af45e0b561c60f768335c9eb79.js" async="" charset="UTF-8"></script><style type="text/css">
+:root #content > #right > .dose > .dosesingle,
+:root #content > #center > .dose > .dosesingle
 { display: none !important; }</style></head>
 <body>
  
@@ -52,20 +58,8 @@
     <input id="format" name="format" value="mp3" type="hidden">
     <input id="button" value="Convert" type="submit">
    </form>
-   <div id="progress">
-    <span>Converting</span> <span></span>
-   </div>
-   <div id="buttons">
-    <a id="download" href="#" rel="nofollow">Download</a>
-   <a href="https://www.facebook.com/sharer/sharer.php?u=https://youtube2mp3.github.io/" rel="nofollow" target="blank">Share to Facebook</a>
-   </div>
-  </div>
-  
-  <div id="converter"> 
-   <div id="title">
-   Paste Link of Youtube Video to Convert to mp3 
-   </div> 
-   <form method="post">
+    
+    <form method="post">
     <input id="input" name="video" autocomplete="off" type="text">
     <input id="format" name="format" value="mp3" type="hidden">
     <input id="button" value="Convert" type="submit">
@@ -77,18 +71,11 @@
     <a id="download" href="#" rel="nofollow">Download</a>
    <a href="https://www.facebook.com/sharer/sharer.php?u=https://youtube2mp3.github.io/" rel="nofollow" target="blank">Share to Facebook</a>
    </div>
-  </div>  
+  </div>
+  
   
    
-    
- 
-  
-
-
-
-
-
-<div class="h-line"></div>
+    <div class="h-line"></div>
   <div id="text">
    <h1>Youtube2mp3 Multi Converter</h1>
 <p>
@@ -113,7 +100,7 @@ Convert and download multiple YouTube videos to mp3 files online for free with o
   
 </script>
 
-<div id="disqus_thread"></div>
+<div id="disqus_thread"><iframe id="dsq-app1" name="dsq-app1" allowtransparency="true" scrolling="no" tabindex="0" title="Disqus" style="width: 1px ! important; min-width: 100% ! important; border: medium none ! important; overflow: hidden ! important; height: 335px ! important;" src="https://disqus.com/embed/comments/?base=default&amp;version=870d83f5f046412e3b5bd31b8e422c4f&amp;f=youtube2mp3&amp;t_u=https%3A%2F%2Fyoutube2mp3multiconvert.github.io%2F&amp;t_d=Youtube2mp3%20Multi%20Converter&amp;t_t=Youtube2mp3%20Multi%20Converter&amp;s_o=default" horizontalscrolling="no" verticalscrolling="no" width="100%" frameborder="0"></iframe><iframe id="indicator-north" name="indicator-north" allowtransparency="true" scrolling="no" tabindex="0" title="Disqus" style="width: 1903px ! important; border: medium none ! important; overflow: hidden ! important; top: 0px ! important; min-width: 1903px ! important; max-width: 1903px ! important; position: fixed ! important; z-index: 2147483646 ! important; height: 20px ! important; min-height: 20px ! important; max-height: 20px ! important; display: none ! important;" frameborder="0"></iframe><iframe id="indicator-south" name="indicator-south" allowtransparency="true" scrolling="no" tabindex="0" title="Disqus" style="width: 1903px ! important; border: medium none ! important; overflow: hidden ! important; bottom: 0px ! important; min-width: 1903px ! important; max-width: 1903px ! important; position: fixed ! important; z-index: 2147483646 ! important; height: 20px ! important; min-height: 20px ! important; max-height: 20px ! important; display: none ! important;" frameborder="0"></iframe></div>
 <script>
 
 /**
@@ -134,6 +121,7 @@ s.setAttribute('data-timestamp', +new Date());
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
   
-<script id="dsq-count-scr" src="//youtube2mp3.disqus.com/count.js" async></script>
+<script id="dsq-count-scr" src="//youtube2mp3.disqus.com/count.js" async=""></script>
 
-</body></html>
+
+<iframe style="display: none;"></iframe><iframe id="dsq-app4" name="dsq-app4" allowtransparency="true" scrolling="no" tabindex="0" title="Disqus" style="width: 1px ! important; min-width: 100% ! important; border: medium none ! important; overflow: hidden ! important; height: 100% ! important; position: fixed ! important; top: 0px ! important; right: 0px ! important; left: auto ! important; bottom: auto ! important; z-index: 2147483647 ! important; display: none ! important;" src="https://disqus.com/home/preload/?utm_source=disqus_embed" width="100%" frameborder="0"></iframe></body></html>
