--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en"><head><script async="" src="https://www.google-analytics.com/analytics.js"></script><script>
+<html lang="en"><head><script async="" src="https://www.google-analytics.com/analytics.js"></script><script async="" src="https://www.google-analytics.com/analytics.js"></script><script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -41,10 +41,13 @@
 { display: none !important; }</style><style type="text/css">
 :root #content > #right > .dose > .dosesingle,
 :root #content > #center > .dose > .dosesingle
-{ display: none !important; }</style><script src="//youtube2mp3.disqus.com/embed.js" data-timestamp="1480092336762"></script><link rel="stylesheet" href="https://a.disquscdn.com/next/embed/styles/loading.88cedde79846569c88b36b63a7cc7414.css"><script src="https://a.disquscdn.com/next/embed/alfie.f51946af45e0b561c60f768335c9eb79.js" async="" charset="UTF-8"></script><style type="text/css">
+{ display: none !important; }</style><script src="//youtube2mp3.disqus.com/embed.js" data-timestamp="1480092336762"></script><style type="text/css">
 :root #content > #right > .dose > .dosesingle,
 :root #content > #center > .dose > .dosesingle
-{ display: none !important; }</style></head>
+{ display: none !important; }</style><link rel="stylesheet" href="https://a.disquscdn.com/next/embed/styles/loading.88cedde79846569c88b36b63a7cc7414.css"><script src="https://a.disquscdn.com/next/embed/alfie.f51946af45e0b561c60f768335c9eb79.js" async="" charset="UTF-8"></script><style type="text/css">
+:root #content > #right > .dose > .dosesingle,
+:root #content > #center > .dose > .dosesingle
+{ display: none !important; }</style><script src="//youtube2mp3.disqus.com/embed.js" data-timestamp="1480092666925"></script></head>
 <body>
  
  <div id="content">
@@ -59,11 +62,7 @@
     <input id="button" value="Convert" type="submit">
    </form>
     
-    <form method="post">
-    <input id="input" name="video" autocomplete="off" type="text">
-    <input id="format" name="format" value="mp3" type="hidden">
-    <input id="button" value="Convert" type="submit">
-   </form>
+  
    <div id="progress">
     <span>Converting</span> <span></span>
    </div>
@@ -71,7 +70,27 @@
     <a id="download" href="#" rel="nofollow">Download</a>
    <a href="https://www.facebook.com/sharer/sharer.php?u=https://youtube2mp3.github.io/" rel="nofollow" target="blank">Share to Facebook</a>
    </div>
-  </div>
+ 
+<div id="converter"> 
+   <div id="title">
+   Paste Link of Youtube Video to Convert to mp3 
+   </div> 
+   <form method="post">
+    <input id="input" name="video" autocomplete="off" type="text">
+    <input id="format" name="format" value="mp3" type="hidden">
+    <input id="button" value="Convert" type="submit">
+   </form>
+    
+  
+   <div id="progress">
+    <span>Converting</span> <span></span>
+   </div>
+   <div id="buttons">
+    <a id="download" href="#" rel="nofollow">Download</a>
+   <a href="https://www.facebook.com/sharer/sharer.php?u=https://youtube2mp3.github.io/" rel="nofollow" target="blank">Share to Facebook</a>
+   </div>
+  
+</div></div>
   
   
    
@@ -124,4 +143,5 @@ s.setAttribute('data-timestamp', +new Date());
 <script id="dsq-count-scr" src="//youtube2mp3.disqus.com/count.js" async=""></script>
 
 
-<iframe style="display: none;"></iframe><iframe id="dsq-app4" name="dsq-app4" allowtransparency="true" scrolling="no" tabindex="0" title="Disqus" style="width: 1px ! important; min-width: 100% ! important; border: medium none ! important; overflow: hidden ! important; height: 100% ! important; position: fixed ! important; top: 0px ! important; right: 0px ! important; left: auto ! important; bottom: auto ! important; z-index: 2147483647 ! important; display: none ! important;" src="https://disqus.com/home/preload/?utm_source=disqus_embed" width="100%" frameborder="0"></iframe></body></html>
+<iframe style="display: none;"></iframe><iframe id="dsq-app4" name="dsq-app4" allowtransparency="true" scrolling="no" tabindex="0" title="Disqus" style="width: 1px ! important; min-width: 100% ! important; border: medium none ! important; overflow: hidden ! important; height: 100% ! important; position: fixed ! important; top: 0px ! important; right: 0px ! important; left: auto ! important; bottom: auto ! important; z-index: 2147483647 ! important; display: none ! important;" src="https://disqus.com/home/preload/?utm_source=disqus_embed" width="100%" frameborder="0"></iframe>
+<iframe style="display: none;"></iframe></body></html>
